WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44282
[Qt] http/tests/incremental/slow-utf8-text.pl fails
https://bugs.webkit.org/show_bug.cgi?id=44282
Summary
[Qt] http/tests/incremental/slow-utf8-text.pl fails
Ademar Reis
Reported
2010-08-19 12:06:36 PDT
With current trunk (65688), all http/tests/incremental tests pass with the exception of slow-utf8-text.pl. (a patch enabling them is on the way) I traced the reason for the failure as the inability of our DRT to detect the content-type of the network reply which originated the main frame and dump it as text whenever it's text/plain. In other words, the tests requires the output to be rendered as text but our DRT is rendering it as a tree. I couldn't find a way to retrieve the content-type (MIME) of a QWebFrame. Other ports (gtk/mac) appear to expose public APIs which allow access to WebCore::DocumentLoader::responseMIMEType(), but that's not the case of Qt. Should we have an API for this, add some hack to allow this test to pass, or keep it ignored? Maybe I'm missing something? Given enough directions I could work on this.
Attachments
Patch
(4.75 KB, patch)
2011-01-15 03:00 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2010-10-10 03:58:16 PDT
This sounds like a job for DumpRenderTreeSupportQt. We use that for exposing WebCore elements in DRT testing that don't otherwise have an API use case.
Robert Hogan
Comment 2
2011-01-15 03:00:22 PST
Created
attachment 79060
[details]
Patch
Simon Hausmann
Comment 3
2011-01-16 23:53:24 PST
Comment on
attachment 79060
[details]
Patch I wouldn't mind a function like QString QWebFrame::contentType() const, but your patch certainly does the trick, too :)
WebKit Commit Bot
Comment 4
2011-01-18 15:50:07 PST
Comment on
attachment 79060
[details]
Patch Clearing flags on attachment: 79060 Committed
r76079
: <
http://trac.webkit.org/changeset/76079
>
WebKit Commit Bot
Comment 5
2011-01-18 15:50:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug